# freekick

./: .gitignore  Doxyfile  README  SConstruct  buildall  launch_client.sh  make
Infos/: architecture.txt  diycup.txt  jerseys.txt  run2.txt  setjersey.sh  spec.txt
Misc/: Main  ai  build  match  ui
addutil/: Libaddutil.cabal
addutil/Libaddutil/: Colors.hs  ListUtils.hs  Net.hs  TChanNet.hs  Vector.hs  XMLParse.hs
c++/: .sconsign.dblite  SConstruct_backup  SConstruct~  launch_client.sh
c++/doc/: classes.txt  classes.txt~  db.txt~
c++/doc/client/: classes.xmi  features.txt  features.txt~
c++/doc/menu/: features.txt~
c++/doc/server/: features.txt  features.txt~
c++/include/client/: GraphicsUpdater.h  InputConfiguration.h  InputEvent.h  InputHandler.h  InputType.h  KeyInputType.h  Network.h  Network.h~
c++/include/libaddutil/: Color.h  Drawable.h  Drawable.h~  Entity.h  Entity.h~  Human.h  Vector3.h  Vector3.h~
c++/include/matchcommon/: Club.h  Club.h~  Event.h~  Player.h  Stadium.h  Status.h  Status.h~
c++/src/client/: .sconsign.dblite  Configuration.cpp  Graphics.cpp  Graphics.cpp~  GraphicsUpdater.cpp  GraphicsUpdater.cpp~  InputEvent.cpp  InputHandler.cpp  Main.cpp  Main.cpp~  Network.cpp  Network.cpp~  TAGS
c++/src/libaddutil/: Drawable.cpp  Drawable.cpp~  Entity.cpp~  Human.cpp  Vector3.cpp  Vector3.cpp~
c++/src/matchcommon/: Club.cpp~  Event.cpp  Event.cpp~  Goal.cpp  Kit.cpp  MatchStatus.cpp  Pitch.cpp  Status.cpp~
data/DB/: Pitches.xml
data/DB/Countries/: .Countries.rnc~  .England.xml~  Clubs.rnc  English.xml
data/DB/Players/: PlEng1.xml  PlEng2.xml  PlEng3.xml  PlEng5.xml
doc/: bullet-notes.txt  classes.txt  clientdata.txt  curr-tasks.txt  db.txt  formation.txt  ideas.txt  matchdata.txt  network.txt  physics-flow.txt  physics-requirements.txt  physics-restrictions.txt  protocol2.txt  rules.txt  skills.txt  swos-fformat.htm  todo.txt
doc/Infos/: AI_decision_tree.txt
doc/ai/: AI_decision_tree.txt  design.txt  features.txt  flow.txt  tasks.txt
doc/classes/: messages.xmi  messages2.xmi  messages3.xmi  soccer.xmi
doc/client/: TODO  design2.txt  physics.txt
doc/diagrams/: addutil.xmi  cl_ai.xmi  cl_ogre.xmi  cl_ogre2.xmi  match.xmi  rules-fsm.xmi  server-20081223.xmi  server-original-design.xmi  soccer2.xmi
doc/menu/: features.txt  leagues.txt
doc/server/: classes.xmi  classes2.xmi  design.txt  design2.txt  design3.txt  features.txt  interfaces.txt
doc/soccer/: org.txt  simulation.txt
doc/unsorted/: run.txt
etc/: Message_Template.h  Task_Template.cpp  Task_Template.h  Template.cpp  Template.h
etc/umbrello/: cleanup_cpp.sed  cleanup_header.sed  conv_cpp.sh  conv_header.sh  emacs-macros
freekick_client/: README
freekick_client/client/: client.py
freekick_client/wxMenu/: Main.hs
freekick_server/: TODO  matchdata.md
freekick_server/ai/: TODO
freekick_server/ai/src/: Actions.hs  Dribble.hs  Main.hs  Main.hs-darcs-backup0  Parameters.hs  Pass.hs
freekick_server/physics/src/: Console.hs
haskell/: build  buildall
haskell/addutil/: Libaddutil.cabal  README
haskell/addutil/Libaddutil/: Collision.hs  Entity.hs  ListUtils.hs  Misc.hs  Net.hs  Person.hs  Physics.hs  Primitives.hs  STMServer.hs  STMUtils.hs
haskell/freekick_client/: freekick-client.cabal
haskell/freekick_client/FreekickMenu/: Main.hs
haskell/freekick_client/client/: client.py_old
haskell/freekick_client/client/src/: Main.hs
haskell/freekick_server/: freekick-server.cabal
haskell/freekick_server/ai/src/: Common.hs  Helpers.hs  Support.hs
haskell/freekick_server/physics/: TODO
haskell/freekick_server/physics/src/: Console.hs  Main.hs
haskell/libfreekick/: Libfreekick.cabal
haskell/libfreekick/Freekick/Libmatch/: Control.hs  PlayerInfo.hs  Rules.hs
haskell/libfreekick/Freekick/Libsoccer/: Calendar.hs  Common.hs  LeagueSystem.hs  Lineup.hs  Match.hs  Player.hs  Stadium.hs  Trophy.hs  World.hs
include/addutil/: Color.h  DynamicEntity.h  Entity.h  Exception.h  Human.h  IP_Connection.h  Parsing.h  Publisher.h  Quaternion.h  StaticEntity.h  Time.h  Vector3.h
include/addutil/ai/: Action.h  AtomicTask.h  CompositeTask.h  Task.h  TaskManager.h
include/addutil/network/: Client.h  Connection.h  Server.h  Unit.h
include/client/: Configuration.h  Graphics.h  IP_Connection.h  Input.h
include/freekick/match/: Ball.h  BallState.h  BulletPhysicsEngine.h  Client.h  ClientEvent.h  Club.h  ConnectionEvent.h  ControlledStatus.h  Event.h  FreekickMotionState.h  Goal.h  MatchBall.h  MatchClub.h  Player.h  (+13 more)
include/libaddutil/: Entity.h  StaticEntity.h  Time.h
include/matchcommon/: Ball.h  Event.h  Goal.h  Kit.h  Pitch.h  Referee.h  Stadium.h  Status.h
libfreekick/: README
share/DB/: Clubs_Alb.xml  Clubs_Alg.xml  Clubs_Arg.xml  Clubs_Aus.xml  Clubs_Aut.xml  Clubs_Bel.xml  Clubs_Blr.xml  Clubs_Bol.xml  Clubs_Bra.xml  Clubs_Bul.xml  Clubs_Chi.xml  Clubs_Chn.xml  Clubs_Col.xml  Clubs_Cro.xml  Clubs_Cyp.xml  Clubs_Cze.xml  Clubs_Den.xml  Clubs_Ecu.xml  Clubs_Eng.xml  Clubs_Esp.xml  Clubs_Est.xml  Clubs_Fin.xml  Clubs_Fra.xml  Clubs_Fro.xml  Clubs_Gdr.xml  Clubs_Gha.xml  Clubs_Gre.xml  Clubs_Hun.xml  Clubs_Ind.xml  Clubs_Isl.xml  Clubs_Isr.xml  Clubs_Ita.xml  Clubs_Jpn.xml  Clubs_Ltu.xml  Clubs_Lux.xml  Clubs_Lva.xml  Clubs_Mex.xml  Clubs_Mlt.xml  Clubs_Ned.xml  Clubs_Nir.xml  (+155 more)
share/Media/: Ball.mesh
src/addutil/: Circle.cpp  Circle.h  Color.cpp  Color.h  DynamicEntity.cpp  DynamicEntity.h  Entity.cpp  Entity.h  Exception.cpp  Exception.h  General.cpp  General.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Human.cpp  Human.h  NeuralNet.cpp  NeuralNet.h  Parsing.h  Publisher.h  Quaternion.cpp  Quaternion.h  Reader.h  Square.cpp  Square.h  StaticEntity.cpp  StaticEntity.h  Steering.cpp  Steering.h  Time.cpp  Time.h  Vector3.cpp  Vector3.h  XML.cpp  XML.h
src/client/: GraphicsUpdater.cpp  Input.cpp  InputConfiguration.cpp  InputType.cpp
src/libaddutil/: Color.cpp  Entity.cpp  Time.cpp
src/matchcommon/: Ball.cpp  Club.cpp  Player.cpp  Referee.cpp  Stadium.cpp  Status.cpp
src/tools/: stadcap.sh
tools/Python/: id-ueberlegung.txt  players.py
(+388 files in other folders)
