Name:           freekick-client
Version:        0.0.2
Cabal-Version:  >= 1.2
License:        GPL
License-File:   LICENSE
Author:         Antti Salonen<ajsalonen at gmail dot com>
Copyright:      Antti Salonen 2008
Stability:      Unstable
Homepage:       http://finder.homelinux.org/freekick
Category:       Games
Synopsis:       A soccer game

Data-files:
  README

Flag WxGui
  Description: Enable WxWidgets menu

Executable freekickmenu
  Build-Depends:  base, haskell98, hexpat,
                  process, containers, 
                  directory, libaddutil>=0.0.1,
                  libfreekick>=0.0.2
  Main-is:        Main.hs
  Hs-Source-Dirs: FreekickMenu
  Include-dirs:   .
  Ghc-options:    -Wall

Executable wxmenu
  Build-Depends:  base, haskell98, hexpat,
                  process, containers, 
                  directory, libaddutil>=0.0.1,
                  libfreekick>=0.0.2,
                  wx>=0.10.3
  Main-is:        Main.hs
  Hs-Source-Dirs: wxMenu
  Include-dirs:   .
  Ghc-options:    -Wall
  if flag(wxgui)
    Buildable:      True
  else
    Buildable:      False

Executable fksdl
  Build-Depends:  base, haskell98, 
                  mtl>=1.1.0.0,
                  stm>=2.1.1.0, containers>=0.1.0.1,
                  SDL>=0.5.4,
                  libaddutil>=0.0.1, libfreekick>=0.0.1
  Main-is:        Main.hs
  Hs-Source-Dirs: client/src
  Include-dirs:   .
  Ghc-options:    -Wall -O

